; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_open_serialization.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_open_serialization.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"systemd-state\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"w+\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @manager_open_serialization(i32* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %8 = load i32**, i32*** %5, align 8
  %9 = call i32 @assert(i32** %8)
  %10 = call i32 @open_serialization_fd(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %3, align 4
  br label %28

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  %17 = call i32* @fdopen(i32 %16, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %25, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @safe_close(i32 %21)
  %23 = load i32, i32* @errno, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %3, align 4
  br label %28

25:                                               ; preds = %15
  %26 = load i32*, i32** %7, align 8
  %27 = load i32**, i32*** %5, align 8
  store i32* %26, i32** %27, align 8
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %25, %20, %13
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @assert(i32**) #1

declare dso_local i32 @open_serialization_fd(i8*) #1

declare dso_local i32* @fdopen(i32, i8*) #1

declare dso_local i32 @safe_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
